--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,19 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-actix-web = "4.9.0"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls"] }
-uuid = "1.1"
+actix-rt = "1.0.0"
+actix-web = "2.0.0"
+actix-http = "1.0.1"
+actix-service = "1.0.5"
+futures = "0.3.4"
+serde = { version = "1.0.104", features = ["derive"] }
+dotenv = "0.15.0"
+config = "0.10.1"
+tokio-pg-mapper = "0.1.4"
+tokio-pg-mapper-derive = "0.1.4"
+deadpool-postgres = "0.5.0"
+tokio-postgres = "0.5.1"
+slog = "2.5.2"
+slog-term = "2.5.0"
+slog-async = "2.4.0"
+slog-envlogger = "2.2.0"
